Fix sidebar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  padding: 20px;
+  padding: 40px;
   letter-spacing: 2px;
 }
 
@@ -61,7 +61,7 @@ a:focus {
 }
 
 #content {
-  padding: 0 20px 20px;
+  padding: 0 40px 20px;
 }
 
 #filter-label {
@@ -85,7 +85,7 @@ a:focus {
 #trail-list-dynamic li {
   font-family: Arial, sans-serif;
   margin: 15px 0;
-  padding: 0 0 10px;
+  padding: 0 0 30px;
   text-align: center;
   width: 100%;
   color: #0c2448;
